# attune

./: .dockerignore  .gitignore  .gitleaks.toml  ACKNOWLEDGMENTS.md  ACKNOWLEDGMENTS.zh.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOP.md  Dockerfile.cli  Dockerfile.installers  Dockerfile.server  FEATURES.md  LICENSE  NOTICE  README.md  README.zh.md  RELEASE.md  USER-FEATURES.md  pyproject.toml
npu-vault/crates/vault-cli/: Cargo.toml
npu-vault/crates/vault-cli/src/: main.rs
rust/: .gitignore  Cargo.toml  DEVELOP.md  README.md  README.zh.md  RELEASE.md  TEST_PLAN.md  agent_flows.toml  agent_quality_manifest.yaml  agents.registry.toml  audit.toml  deny.toml
rust/.cargo/: audit.toml
rust/crates/attune-accounts/: Cargo.toml
rust/crates/attune-accounts/src/: device_binding.rs  lib.rs  license_protocol.rs  main.rs
rust/crates/attune-agent-sdk/: Cargo.toml  README.md
rust/crates/attune-agent-sdk/src/: agent_main.rs  lib.rs
rust/crates/attune-cli/: Cargo.toml
rust/crates/attune-cli/src/: main.rs
rust/crates/attune-cli/tests/: cli_agent_flow_smoke.rs  cli_agent_gate_smoke.rs  cli_agent_registry_smoke.rs  cli_office_smoke.rs  cli_recognize_regions_smoke.rs
rust/crates/attune-core/: Cargo.toml
rust/crates/attune-core/assets/plugins/: presales.yaml  tech.yaml
rust/crates/attune-core/benches/: hdbscan_accuracy.rs
rust/crates/attune-core/data/: demo.json
rust/crates/attune-core/examples/: chunker_diag.rs
rust/crates/attune-core/proptest-regressions/infer/: model_source.txt
rust/crates/attune-core/src/: accounts_client.rs  agent_quality.rs  agent_runner.rs  agent_telemetry.rs  ai_annotator.rs  asr.rs  async_fs.rs  backup.rs  capability_dispatch.rs  case_metadata.rs  cert_pin.rs  chat.rs  chunker.rs  classifier.rs  cloud_client.rs  clusterer.rs  context_budget.rs  context_compress.rs  cost.rs  crypto.rs  demo.rs  device_binding.rs  embed.rs  entities.rs  entitlement.rs  entitlement_anchor.rs  entitlement_reverify.rs  entity_graph.rs  error.rs  feedback.rs  governor.rs  index.rs  intent_router.rs  job_handler.rs  lib.rs  license.rs  license_cache.rs  llm.rs  llm_settings.rs  mcp_client.rs  (+41 more)
rust/crates/attune-core/src/agent_telemetry/: tests.rs
rust/crates/attune-core/src/agents/: document_classifier.rs  flow.rs  flow_runner.rs  mod.rs  registry.rs  scheduler.rs
rust/crates/attune-core/src/cache/: key.rs  memory.rs  mod.rs  sqlite_encrypted.rs
rust/crates/attune-core/src/capture/: email.rs  mod.rs  telegram.rs
rust/crates/attune-core/src/chat_reliability/: agent.rs  mod.rs
rust/crates/attune-core/src/document_intelligence/: chapters.rs  compare.rs  deep_summary.rs  extractive.rs  mod.rs  model_routing.rs  token_bill.rs  vlm_extract.rs
rust/crates/attune-core/src/feedback/: tests.rs
rust/crates/attune-core/src/governor/: tests.rs
rust/crates/attune-core/src/infer/: embedding.rs  mod.rs  model_source.rs  model_store.rs  reranker.rs
rust/crates/attune-core/src/ingest/: email.rs  (+6 more)
rust/crates/attune-core/tests/: agent_gate_orchestrator.rs  asr_ingest_test.rs  change_password_test.rs  chat_reliability_golden_gate.rs  chat_reliability_integration.rs  chat_reliability_proptests.rs  chunking_quality_test.rs  concurrent_stress_test.rs  crash_recovery_test.rs  deepsum_savings.rs  doc_compare_verdict_golden_gate.rs  doc_intel_real_llm_gate.rs  document_classifier_agent_golden_gate.rs  document_classifier_agent_integration.rs  document_classifier_agent_proptests.rs  email_accounts_test.rs  generic_plugins_test.rs  git_connector.rs  governor_integration.rs  i18n_ingest_search_test.rs  ingest_edge_resource_test.rs  ingest_email_test.rs  ingest_pipeline_test.rs  ingest_rss_test.rs  job_queue_durable.rs  linker_entity_debug.rs  linker_golden_gate.rs  memory_consolidation_agent_golden_gate.rs  memory_consolidation_agent_integration.rs  memory_consolidation_agent_proptests.rs  memory_consolidation_integration.rs  memory_moat_integration.rs  memory_token_reduction_benchmark.rs  migration_roundtrip_test.rs  model_boundary_audit.rs  multilayer_memory_integration.rs  nontext_cross_validate_golden.rs  ocr_image_test.rs  ocr_long_page_audit.rs  office_adversarial_test.rs  (+27 more)
rust/crates/attune-server/: Cargo.toml
rust/crates/attune-server/src/: acp_chat.rs  error.rs  eval.rs  ingest_email.rs  ingest_git.rs  ingest_rss.rs  ingest_webdav.rs  job_worker.rs  lib.rs  main.rs  middleware.rs  state.rs  test_support.rs
rust/crates/attune-server/tests/: acp4_governor_wire_test.rs  acp5_chat_flow_wire_test.rs  ai_stack_web_search_test.rs  amd_laptop_e2e_smoke.rs  api_v1_version_test.rs  chat_cost_estimate_test.rs  documents_member_gate.rs  documents_redaction.rs  documents_routes.rs  egress_guard.rs  eval_determinism_test.rs  eval_response_surface_test.rs  form_factor_integration.rs  forms_routes_test.rs  git_route_subprocess.rs  index_path_test.rs  lock_order_abba_test.rs  marketplace_install_test.rs  member_auth_test.rs  member_routes_test.rs  ocr_profiles_routes_test.rs  office_asr_golden_gate.rs  office_cancel_test.rs  office_concurrent_test.rs  office_error_contract.rs  office_failure_recovery_test.rs  office_happy_path.rs  office_ocr_golden_gate.rs  office_prop_tests.proptest-regressions  office_prop_tests.rs  office_schema_compat.rs  office_six_category_floor.rs  pii_chat_path_locking_test.rs  privacy_endpoints_test.rs  projects_routes_test.rs  session_test.rs  settings_lock_test.rs  store_queue_test.rs  system_wizard_full_flow_test.rs  vault_lock_endpoint_test.rs  (+3 more)
rust/crates/attune-server/ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
rust/crates/attune-server/ui-demo/: forms-iframe.html  member-settings.html  playwright_forms_test.py  playwright_forms_v2_test.py  playwright_member_locks_test.py
rust/crates/attune-tauri/: Cargo.toml.template  README.md
rust/crates/attune-tauri/src/: main.rs.template
rust/scripts/: gen-office-fixtures.py
rust/tests/: classifier_test.rs  corpus_integration_test.rs  integration_test.rs  server_test.rs
rust/tests/corpora/: .gitignore  README.md
rust/tests/golden/: queries.json
(+928 files in other folders)
