[workspace]
resolver = "2"
members = ["crates/attune-core", "crates/attune-cli", "crates/attune-server"]

[workspace.metadata.features]
note = "Use --features='attune-core/cuda' (Linux NVIDIA), 'attune-core/directml' (Win), 'attune-core/coreml' (Mac) to enable GPU EP. Default = CPU only."

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"

[package]
name = "attune"
version = "0.1.0"
edition.workspace = true
publish = false

[dev-dependencies]
attune-core = { path = "crates/attune-core" }
attune-server = { path = "crates/attune-server" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
serde_json = "1"

[[test]]
name = "server_test"
path = "tests/server_test.rs"
