[package]
name = "vault-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "npu-vault"
path = "src/main.rs"

[dependencies]
vault-core = { path = "../vault-core" }
clap = { version = "4", features = ["derive"] }
rpassword = "7"
serde_json = "1"
