[package]
name = "attune-core"
version = "1.0.7"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
serde = { workspace = true }
serde_json = { workspace = true }
# Plan A1 — Cache/Context/Token standard API:
#   blake3: cache key derivation (32-hex prefix, 64-bit collision domain per spec §7.2)
#   async-trait: CacheBackend trait (async get/put/clear/count for future Redis/disk backends)
blake3 = "1.5"
async-trait = "0.1"
# lru 0.13 — pinned to match attune-server (RUSTSEC-2026-0002 fix; 0.12 had unsound IterMut)
lru = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = { workspace = true }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
usearch = "2.25"  # 升至 2.25+ 修 Windows MAP_FAILED build 失败 (2.24.0 用了 POSIX-only mman.h)
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { workspace = true, features = ["blocking", "cookies"] }
# WebDAV 客户端 —— 替手写脆弱 XML PROPFIND parser。reqwest_dav 复用
# reqwest 的 rustls TLS 栈（纯 Rust，跨平台含 Windows P0，不引系统 OpenSSL）。
reqwest_dav = { version = "0.3", default-features = false, features = ["rustls-tls"] }
# Email IMAP 采集 —— async-imap 走 tokio runtime（与 WebDavConnector 同 runtime 桥接模式，
# 不引第二个 async runtime）；TLS 用 tokio-rustls 自建连接器喂给 async-imap，
# 避免 async-imap 默认的 async-native-tls → openssl-sys（违反纯 Rust TLS 硬约束）。
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
# async-imap 的 uid_fetch 返回 `impl Stream`；需要 futures 的 StreamExt 来 .next() 消费。
futures = { version = "0.3", default-features = false, features = ["std"] }
mail-parser = "0.11"
# RSS / Atom 解析 —— feed-rs 2.x，纯 Rust，统一 Atom / RSS 1.0 / RSS 2.0 / JSON Feed
# 到一个 `Feed` 类型。与 mail-parser 同一定位：解析层离线可测，不触网。
feed-rs = "2.3"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
tokio = { workspace = true }
tantivy = "0.22"
tantivy-jieba = "0.11"
walkdir = "2"
notify = "8"
log = "0.4"
hdbscan = "0.11"
serde_yaml = "0.9"
tempfile = "3"
pdf-extract = "0.8"
zip = "2"
# .attunepkg (tar.gz) 解压 —— 纯 Rust，跨平台含 Windows P0，不依赖系统 tar
tar = "0.4"
flate2 = "1"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "tls-rustls", "copy-dylibs", "api-24", "download-binaries"] }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
# PP-OCR (P2-P4): 用 kreuzberg-paddle-ocr 替代自实现 DBNet+CRNN+CTC。
# MIT 兼容 Apache-2.0；ort 2.0.0-rc.12 与本 crate 已对齐
kreuzberg-paddle-ocr = "4.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = { version = "0.26", default-features = false }
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }  # 0.5 起加 rustls-tls 路径; 这里用 ureq (默认 rustls), 不引入 native-tls/openssl-sys
scraper = "0.21"
calamine = { version = "0.26", features = ["dates"] }
urlencoding = "2"
# 跨平台 PATH 二进制查找（替代 `which`/`where`，Win/Linux/macOS 一致行为）
which = "6"
# P1: 插件签名校验 (ed25519) —— 预留，PluginHub 上线前官方公钥占位
ed25519-dalek = "2"
base64 = "0.22"
regex = "1"
# H1 资源治理：跨平台 CPU/RAM 采样（Linux /proc · Win PDH · macOS task_info）
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[features]
default = []
cuda = ["ort/cuda"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]
# 集成测试用：暴露 __test_seed_* 等内部 fixture helper。生产构建不开。
test-utils = []

# Self-dev-dependency：让 `cargo test -p attune-core` 自动启用 test-utils feature，
# 集成测试无需 --features 显式开启。生产 `cargo build` 不受影响（仅 dev profile）。
[dev-dependencies]
attune-core = { path = ".", features = ["test-utils"] }
# memory_consolidation_agent (L2 → L3 deterministic promotion) — 属性测试需要 proptest.
# 与 attune-server 同版本（workspace 内统一），dev profile only.
proptest = "1"

[lints]
workspace = true
