[package]
name = "attune-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "attune_server"
path = "src/lib.rs"

[[bin]]
name = "attune-server-headless"
path = "src/bin/headless.rs"

[dependencies]
attune-core = { path = "../attune-core" }
axum = { version = "0.8", features = ["json", "multipart", "ws"] }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
axum-server = { version = "0.7", features = ["tls-rustls"] }
# dirs：原 5，统一到 workspace = 6
dirs = { workspace = true }
lru = "0.12"
uuid = { version = "1", features = ["v4"] }
reqwest = { workspace = true, features = ["json"] }
local-ip-address = "0.6"
# dunce: Windows 上 std::fs::canonicalize 返回 \\?\C:\... UNC 前缀,
# 导致 PathBuf::starts_with(home) 失败. dunce::canonicalize 自动剥
# UNC 前缀, 跨平台行为一致. 见 routes/index.rs::validate_bind_path
dunce = "1"

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

[lints]
workspace = true
