[package]
name = "attune-server"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "attune_server"
path = "src/lib.rs"

[[bin]]
name = "attune-server-headless"
path = "src/bin/headless.rs"

[dependencies]
attune-core = { path = "../attune-core" }
axum = { version = "0.8", features = ["json", "multipart", "ws"] }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
axum-server = { version = "0.7", features = ["tls-rustls"] }
# dirs：原 5，统一到 workspace = 6
dirs = { workspace = true }
lru = "0.13"  # 升级修 RUSTSEC-2026-0002 (0.12 IterMut Stacked Borrows unsound)
uuid = { version = "1", features = ["v4"] }
reqwest = { workspace = true, features = ["json"] }
local-ip-address = "0.6"
# dunce: Windows 上 std::fs::canonicalize 返回 \\?\C:\... UNC 前缀,
# 导致 PathBuf::starts_with(home) 失败. dunce::canonicalize 自动剥
# UNC 前缀, 跨平台行为一致. 见 routes/index.rs::validate_bind_path
dunce = "1"
# thiserror: 统一 AppError derive (OPT-3 / ARCH-A). 各 route 复用 IntoResponse.
thiserror = "2"
# RSS worker 到期判断需要解析 last_polled_at RFC3339 时间戳。
chrono = { workspace = true }
# Office helper (v0.7.1): OCR 端点写 multipart bytes 到临时文件喂 PP-OCR provider.
tempfile = "3"

[dev-dependencies]
reqwest = { workspace = true, features = ["json", "multipart"] }
tokio = { workspace = true, features = ["test-util"] }
proptest = "1"

[lints]
workspace = true
